<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/MusicTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="wrap_content"
        android:layout_height="358dp"
        android:layout_gravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/img" />
    <!--显示歌曲状态-->
    <TextView
        android:id="@+id/MusicStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/tips_background"
        android:text="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center_horizontal">

        <!--显示当前进度-->
        <TextView
            android:id="@+id/MusicTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroTime" />

        <SeekBar
            android:id="@+id/MusicSeekBar"
            android:layout_width="230sp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/MusicTime"
            android:max="100" />

        <!--显示总进度-->
        <TextView
            android:id="@+id/MusicTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/MusicSeekBar"
            android:text="@string/zeroTime" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/BtnBackward"
            style="@style/PlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/btnBackward"
            android:src="@android:drawable/ic_media_rew" />

        <ImageButton
            android:id="@+id/BtnPre"
            style="@style/PlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape"
            android:contentDescription="@string/btnPre"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/BtnPlayOrPause"
            style="@style/PlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape"
            android:contentDescription="@string/btnPlayOrPause"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/BtnNext"
            style="@style/PlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape"
            android:contentDescription="@string/btnNext"
            android:src="@android:drawable/ic_media_next" />

        <ImageButton
            android:id="@+id/BtnForward"
            style="@style/PlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:contentDescription="@string/btnForward"
            android:src="@android:drawable/ic_media_ff" />
    </LinearLayout>
</LinearLayout>

